# crm-API

./: .gitignore  README.md  pyproject.toml
app/: app.py
app/models/: models.py
config/: settings.py
migrations/: env.py
migrations/versions/: 75db30c63ccf_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
